--- a/BathroomRater/res/values/strings.xml
+++ b/BathroomRater/res/values/strings.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">BathroomRater</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_university_select">UniversitySelectActivity</string>
+    <string name="hello_world">Hello world!</string>
+
 </resources>
