--- a/BathroomRater/res/values/strings.xml
+++ b/BathroomRater/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="title_activity_university_select">UniversitySelectActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_selection_hub">SelectionHub</string>
+    <string name="title_activity_map">MapActivity</string>
 
 </resources>
